fix contact button alignment

--- a/style.css
+++ b/style.css
@@ -378,7 +378,6 @@ a {
 
 .booking-btn {
   display: inline-block;
-  margin-top: 15px;
 
   background: white;
   color: black;
